@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018, 2022, Oracle and/or its affiliates. All rights reserved.
  * Copyright (c) 2018, Google and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
@@ -26,18 +26,32 @@ package MyPackage;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.concurrent.ThreadFactory;
 
 // Graal is not tested here due to Graal not supporting DisableIntrinsic.
 /**
  * @test
  * @summary Verifies that when the VM event is sent, sampled events are also collected.
- * @build Frame HeapMonitor
- * @compile HeapMonitorVMEventsTest.java
  * @requires vm.jvmti
  * @requires !vm.graal.enabled
+ * @build Frame HeapMonitor
+ * @compile HeapMonitorVMEventsTest.java
  * @run main/othervm/native -XX:+UnlockDiagnosticVMOptions
  *                          -XX:DisableIntrinsic=_clone
- *                          -agentlib:HeapMonitorTest MyPackage.HeapMonitorVMEventsTest
+ *                          -agentlib:HeapMonitorTest MyPackage.HeapMonitorVMEventsTest platform
+ */
+
+/**
+ * @test
+ * @summary Verifies that when the VM event is sent, sampled events are also collected.
+ * @requires vm.jvmti
+ * @requires !vm.graal.enabled
+ * @build Frame HeapMonitor
+ * @compile --enable-preview -source ${jdk.version} HeapMonitorVMEventsTest.java
+ * @run main/othervm/native --enable-preview
+ *                          -XX:+UnlockDiagnosticVMOptions
+ *                          -XX:DisableIntrinsic=_clone
+ *                          -agentlib:HeapMonitorTest MyPackage.HeapMonitorVMEventsTest virtual
  */
 
 public class HeapMonitorVMEventsTest implements Cloneable {
@@ -94,12 +108,32 @@ public class HeapMonitorVMEventsTest implements Cloneable {
     checkDifference(onlySampleCount, vmCount);
   }
 
-  public static void main(String[] args) {
+  public static void main(String[] args) throws Exception {
     if (!HeapMonitor.eventStorageIsEmpty()) {
       throw new RuntimeException("Storage is not empty at test start...");
     }
 
     HeapMonitor.sampleEverything();
-    compareSampledAndVM();
+
+    if(args[0].equals("virtual")) {
+        Thread t = virtualThreadFactory().newThread(HeapMonitorVMEventsTest::compareSampledAndVM);
+        t.start();
+        t.join();
+    } else {
+        compareSampledAndVM();
+    }
+  }
+
+  private static ThreadFactory virtualThreadFactory() {
+    try {
+        Object builder = Thread.class.getMethod("ofVirtual").invoke(null);
+        Class<?> clazz = Class.forName("java.lang.Thread$Builder");
+        java.lang.reflect.Method factory = clazz.getMethod("factory");
+        return (ThreadFactory) factory.invoke(builder);
+    } catch (RuntimeException | Error e) {
+        throw e;
+    } catch (Exception e) {
+        throw new RuntimeException(e);
+    }
   }
 }
