@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2007, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2007, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -80,7 +80,7 @@ public class CollatorProviderTest extends ProviderTest {
     }
 
     void objectValidityTest() {
-        Collator def = Collator.getInstance(new Locale(""));
+        Collator def = Collator.getInstance(Locale.of(""));
         String defrules = ((RuleBasedCollator)def).getRules();
 
         for (Locale target: availloc) {
